--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,24 @@
 cmake_minimum_required(VERSION 3.0.0)
-# Specify the project info.
+
 project(CRAW VERSION 0.1 DESCRIPTION "C Reddit API Wrapper")
-# Declare the library target.
-add_library(${PROJECT_NAME} SHARED
-    	src/CRAW_Main.c
-    	src/CRAW.h
-	src/CRAW_Account.c
-	src/CRAW_Account.h
-)
-# Configure the directories to search for header files.
+
+add_library(${PROJECT_NAME} SHARED src/cJSON.c src/CRAW_Main.c src/CRAW_Account.c src/CRAW.h src/CRAW_Account.h include/cJSON.h)
+
 target_include_directories(${PROJECT_NAME} PRIVATE include)
-# Set the version property.
-set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
-# Set the shared object version property to the project's major version.
-set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
-# Set the public header property to the one with the actual API.
-set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER src/CRAW.h)
+
+find_package(CURL REQUIRED)
+if(CURL_FOUND)
+    message(STATUS "Found CURL version: ${CURL_VERSION_STRING}")
+    message(STATUS "Using CURL include dir(s): ${CURL_INCLUDE_DIRS}")
+    message(STATUS "Using CURL lib(s): ${CURL_LIBRARIES}")
+    target_include_directories(${PROJECT_NAME} PRIVATE ${CURL_INCLUDE_DIRS})
+    target_link_libraries(${PROJECT_NAME} ${CURL_LIBRARIES})
+else()
+    message(FATAL_ERROR "Could not find CURL")
+endif()
+
+set_target_properties(CRAW PROPERTIES PUBLIC_HEADER "include/CRAW.h;include/CRAW_Account.h")
+
+install(TARGETS CRAW LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/CRAW)
+
+
