--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.13.4)
 
 project(CRAW VERSION 0.1 DESCRIPTION "C Reddit API Wrapper")
 
@@ -19,6 +19,6 @@ endif()
 
 set_target_properties(CRAW PROPERTIES PUBLIC_HEADER "include/CRAW.h;include/CRAW_Account.h")
 
-install(TARGETS CRAW LIBRARY DESTINATION lib ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION include ${CMAKE_INSTALL_INCLUDEDIR})
+install(TARGETS CRAW LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/CRAW)
 
 
