--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13.4)
 
 project(CRAW VERSION 0.1 DESCRIPTION "C Reddit API Wrapper")
-
+add_compile_options(-Wall -Wextra -Wpedantic -g)
 add_library(${PROJECT_NAME} SHARED src/cJSON.c src/CRAW_Main.c src/CRAW_Account.c include/CRAW.h include/CRAW_Account.h include/cJSON.h include/CRAW_PRIVATE.h)
 
 target_include_directories(${PROJECT_NAME} PRIVATE include)
