--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13.4)
 
-project(CRAW VERSION 0.1 DESCRIPTION "C Reddit API Wrapper")
+project(CRAW VERSION 0.1 DESCRIPTION "C Reddit API Wrapper" LANGUAGES C)
 add_compile_options(-Wall -Wextra -Wpedantic -g)
 add_library(${PROJECT_NAME} SHARED src/cJSON.c src/CRAW_Main.c src/CRAW_Account.c include/CRAW.h include/CRAW_Account.h include/cJSON.h include/CRAW_PRIVATE.h)
 
@@ -19,6 +19,6 @@ endif()
 
 set_target_properties(CRAW PROPERTIES PUBLIC_HEADER "include/CRAW.h;include/CRAW_Account.h")
 
-install(TARGETS CRAW LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CRAW)
+install(TARGETS CRAW LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include/CRAW)
 
 
